Fix header on portrait mode on iPhone X

--- a/source/assets/stylesheets/partials/_header.scss
+++ b/source/assets/stylesheets/partials/_header.scss
@@ -10,8 +10,12 @@ $header-extra-mobile: new-breakpoint(max-width 350px);
   z-index: 1000;
 
   @include iphonex-notch;
+  max-width: 95%;
 
-  @include media($laptop)  { padding: 30px 20px; }
+  @include media($laptop)  {
+    padding: 30px 20px;
+    max-width: 100%;
+  }
   @include media($desktop) { padding: 30px 0; }
 
   html[data-page-type=index] & {
