--- a/source/assets/stylesheets/templates/_index.scss
+++ b/source/assets/stylesheets/templates/_index.scss
@@ -90,13 +90,7 @@
     transform: translateY(50px);
     animation: index-feed 1s 0.4s $easing-out-back forwards;
 
-    /* iOS 11 */
-    padding-left: constant(safe-area-inset-left);
-    padding-right: constant(safe-area-inset-right);
-
-    /* iOS 11.2+ */
-    padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
+    @include iphonex-notch;
 
     h2 {
       font-family: $ds-font-family-complementary;
